# cuda_tinyraytracer

./: CMakeLists.txt  Readme.md  geometry.h  out.ppm  tinyraytracer.cu
